z-index fix for base level

--- a/css/scene-01.css
+++ b/css/scene-01.css
@@ -87,6 +87,7 @@
   top: 50%;
   left: 50%;
   width: 750px;
+  z-index: 3;
 }
 
 .section-01 .host-cell-machinery-cog-1,
